Edit UserDTO & SecurityConfiguration
* default constructor added to UserDTO
* csrf disabled
* form fields' names renamed in registration.html

--- a/src/main/webapp/registration.html
+++ b/src/main/webapp/registration.html
@@ -23,7 +23,7 @@
 <br>
 
 <div align="center">
-    <form action="/api/users" method="post">
+    <form action="/api/users/add" method="post">
 
         user name:
         <br>
@@ -31,15 +31,15 @@
         <br><br>
         mail:
         <br>
-        <input type="text" name="mail" required>
+        <input type="text" name="email" required>
         <br><br>
         password:
         <br>
-        <input type="password" name="Password" required>
+        <input type="password" name="password" required>
         <br><br>
         repeat password:
         <br>
-        <input type="password" name="passwordRepeated" required>
+        <input type="password" name="confirmPassword" required>
         <br><br>
 
         <button type="submit" name="registerButton" value="register">register</button>
